--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,14 @@
 }
 @keyframes logo {
   to{
-    top: -13vh;
-    right: -5vw;
+    top: -5vh;
+    right: 0vw;
+    width: 20vmin;
+    height: auto;
   }
+}
+.logo_hover :hover{
+  box-shadow: 3px;
 }
 
 .tw-wrap{
@@ -20,7 +25,7 @@
   top: 0vh;
   width: 60vw;
   height: 50vh;
-  background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,100)),url(./Images/taiwan.png);
+  background: linear-gradient(to bottom, rgba(206, 250, 253, 0), rgba(206, 250, 253, 100)),url(./Images/taiwan.png);
   background-size: 30vw auto;
   background-repeat: no-repeat;
   animation: taiwan 1s linear;
