--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,5 @@ body {
   padding: 0;
   margin: 0;
   min-height: 500vh;
-  background-color: #fff;
-  /*animation: body 1s linear;*/
+  background-color: rgb(206, 250, 253);
 }
