--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,4 @@
-.logo {
-  position: fixed;
-  width: 40vmin;
-  height: auto;
-  right: 25vw;
-  top: -5vh;
-  animation: logo 1s linear;
-  z-index: 2;
-}
-@keyframes logo {
-  to{
-    top: -5vh;
-    right: 0vw;
-    width: 20vmin;
-    height: auto;
-  }
-}
-.logo_hover :hover{
-  box-shadow: 3px;
-}
-
-.tw-wrap{
+/* .tw-wrap{
   position: fixed;
   left: 35vw;
   top: 0vh;
@@ -34,7 +13,7 @@
   to{
     height: 200vh;
   }
-}
+} */
 
 .menu {
   position: fixed;
@@ -45,12 +24,12 @@
   cursor: pointer;
 }
 
-:root * {
+/* :root * {
   animation-play-state: paused;
   animation-delay: calc(var(--scroll) * -1s);
   animation-iteration-count: 1;
   animation-fill-mode: both;
-}
+} */
 
 h3 {
   color: #103D65;
