--- a/src/Containers/MainPage.css
+++ b/src/Containers/MainPage.css
@@ -28,6 +28,7 @@
     animation-fill-mode: forwards;
     animation-timing-function: ease-in-out;
     z-index: 2;
+    cursor: pointer;
   }
 
   @keyframes logo {
